<resources>
    <string name="app_name">Gojek</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_promos">Promo</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="gopay">Gopay</string>
    <string name="payment_made_easy_nwith_gopay">Payment made easy\nwith Gopay!</string>
    <string name="top_up">Top Up</string>
    <string name="pay">Pay</string>
    <string name="explorer">Explorer</string>
</resources>