<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/bottomSheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/shp_white_top_16dp">

                    <View
                        android:id="@+id/topDecor"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="4dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/shp_circle_grey" />

                </RelativeLayout>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/white">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_15sdp">

                            <SearchView
                                android:id="@+id/searchview"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_35sdp"
                                android:iconifiedByDefault="false"
                                android:padding="@dimen/_3sdp"
                                android:queryBackground="@null"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                android:queryHint="Find food, place, or service..."
                                app:layout_constraintWidth_percent="0.82"
                                android:background="@drawable/shp_searchview"
                                android:theme="@style/style_searcview"/>

                            <com.google.android.material.button.MaterialButton
                                android:layout_width="@dimen/_35sdp"
                                android:layout_height="@dimen/_35sdp"
                                android:background="@drawable/ic_account"
                                app:backgroundTint="@null"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"/>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardview_menu"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_75sdp"
                                android:layout_marginTop="@dimen/_15sdp"
                                app:layout_constraintTop_toBottomOf="@id/searchview"
                                app:cardBackgroundColor="@color/color0081A0"
                                app:cardCornerRadius="@dimen/_12sdp">
                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:padding="@dimen/_12sdp">

                                    <androidx.cardview.widget.CardView
                                        android:id="@+id/cardview_menu_gopay"
                                        android:layout_width="0dp"
                                        app:layout_constraintWidth_percent="0.40"
                                        android:layout_height="match_parent"
                                        app:cardCornerRadius="@dimen/_12sdp"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        tools:ignore="TooDeepLayout">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="vertical"
                                            android:padding="@dimen/_4sdp">

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/gopay"
                                                android:textSize="16sp"
                                                android:textStyle="bold"
                                                android:textColor="@color/black"
                                                android:drawablePadding="@dimen/_3sdp"
                                                app:drawableStartCompat="@drawable/gopay_mini" />

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/payment_made_easy_nwith_gopay"
                                                android:textSize="12sp"/>

                                        </LinearLayout>
                                    </androidx.cardview.widget.CardView>


                                    <LinearLayout
                                        android:id="@+id/linear_topup"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        app:layout_constraintStart_toEndOf="@id/cardview_menu_gopay"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        android:gravity="center"
                                        android:layout_marginTop="@dimen/_6sdp"
                                        android:orientation="vertical">

                                        <com.google.android.material.button.MaterialButton
                                            android:layout_width="24dp"
                                            android:layout_height="24dp"
                                            android:background="@drawable/ic_topup"
                                            app:backgroundTint="@null"/>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/top_up"
                                            android:layout_marginTop="3dp"
                                            android:textSize="12sp"
                                            android:textColor="@color/white"/>


                                    </LinearLayout>
                                    <LinearLayout
                                        android:id="@+id/linear_pay"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        app:layout_constraintStart_toEndOf="@id/cardview_menu_gopay"
                                        app:layout_constraintEnd_toStartOf="@id/linear_topup"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        android:gravity="center"
                                        android:layout_marginTop="@dimen/_6sdp"
                                        android:orientation="vertical">

                                        <com.google.android.material.button.MaterialButton
                                            android:layout_width="24dp"
                                            android:layout_height="24dp"
                                            android:background="@drawable/ic_pay"
                                            app:backgroundTint="@null"/>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/pay"
                                            android:layout_marginTop="3dp"
                                            android:textSize="12sp"
                                            android:textColor="@color/white"/>


                                    </LinearLayout>
                                    <LinearLayout
                                        android:id="@+id/linear_explorer"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        app:layout_constraintStart_toEndOf="@id/linear_topup"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        android:gravity="center"
                                        android:layout_marginTop="@dimen/_6sdp"
                                        android:orientation="vertical">

                                        <com.google.android.material.button.MaterialButton
                                            android:layout_width="24dp"
                                            android:layout_height="24dp"
                                            android:background="@drawable/ic_explorer"
                                            app:backgroundTint="@null"/>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/explorer"
                                            android:layout_marginTop="3dp"
                                            android:textSize="12sp"
                                            android:textColor="@color/white"/>


                                    </LinearLayout>

                                </androidx.constraintlayout.widget.ConstraintLayout>
                            </androidx.cardview.widget.CardView>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <include android:id="@+id/include"
                            layout="@layout/layout_content"/>

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_menu_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_75sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_40sdp"
            android:layout_margin="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardElevation="@dimen/_8sdp">

            <View
                android:id="@+id/viewBottomSheet"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="4dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shp_circle_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/gocar_svg"/>

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/goride_svg"/>

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/gofood_svg"/>

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/gomart_svg"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <include android:id="@+id/includeBottomSheet"
                layout="@layout/bottom_sheet"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>